# neuro-agent

./: .gitignore  Dockerfile  README.md  __init__.py  __main__.py  audit.jsonl  auth.py  chat_sessions.py  config.py  llm.py  main.py  memory.py  orchestrator.py  pyproject.toml  requirements.txt  ruff.toml  run_server.py  tool_schemas.py
.github/workflows/: cd.yml  ci.yml
api/: app.py
eval/: gold.example.json  harness.py
integrations/: __init__.py  calendar_client.py  chat_bot.py  drive_client.py  fhir_client.py  gmail_client.py  patient_roster.py
prompts/: chat_system.md  mdt_chair_synthesis.md  mdt_neurooncologist.md  mdt_neuroradiologist.md  mdt_neurosurgeon.md  mdt_pharmacist.md  mri_system.md  orchestrator_system.md  pharma_system.md  rano_extract_system.md  recist_system.md  record_system.md  summary_system.md  treatment_opt_system.md
scripts/: __init__.py  setup_google_chat.py  setup_oauth.py
static/: graph_viewer.html
tests/: test_chat_bot.py  test_imports.py
tools/: __init__.py  chat_agent.py  clinical_trial_match.py  faers_check.py  ingest.py  mri_agent.py  pharma_agent.py  pubmed_evidence.py  recist_agent.py  synthesis_agent.py  treatment_opt_agent.py
utils/: approval.py  audit.py  clinicaltrials_client.py  dicom_anon.py  faers_client.py  fhir_to_pipeline.py  graph_export.py  graph_worker.py  lightrag_store.py  llm_enrichment.py  longitudinal_history.py  patient_state.py  pgx_adjuster.py  pubmed_client.py  radiomics_extractor.py  rag_penalty.py  schemas.py  seg_worker.py  smbo_engine.py  survival_models.py  tool_helpers.py  volumetric_seg.py
(+56 files in other folders)
