[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neuro-agent"
version = "0.1.0"
description = "Neuro-Oncology Unified Care Agent"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "ollama>=0.2.1",
    "chromadb>=0.5.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.130.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0", "pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]

[tool.setuptools.packages.find]
# When installed from inside neuro_agent/ — package name is neuro_agent
where = [".."]
include = ["neuro_agent*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
